ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-ingress
  namespace: default
  annotations:
    cert-manager.io/issuer: letsencrypt-nginx
spec:
  tls:
    - hosts:
        - api.asianmomrecipes.com
        - api.delrosamassage.co
        - api.autoapply.com
      secretName: letsencrypt-nginx
  rules:
  - host: "api.asianmomrecipes.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: recipe-service
            port:
              number: 50150
  - host: "api.delrosamassage.co"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: massage-service
            port:
              number: 65535
  - host: "api.autoapply.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: autoapply-service
            port:
              number: 65534
  ingressClassName: nginx
